--- a/style.css
+++ b/style.css
@@ -10,13 +10,18 @@ h1 {
 }
 
 .input-list {
-    text-align: center;
     font-size: 30px;
     font-style: italic;
-    margin-bottom: 50px;
+    background-color: gray;
 }
 
 .container {
     text-align: center;
     font-size: 25px;
+    background-color:greenyellow;
+    margin: 100px;
+}
+
+.options {
+    background-color: 
 }
