--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
     color: white;
 }
 
-.input-list {
+.inputTask {
     font-size: 30px;
     font-style: italic;
     background-color: gray;
