--- a/style.css
+++ b/style.css
@@ -28,5 +28,20 @@ h1 {
 
 .tasks {
   list-style: none;
-  padding-right: 500px;
+  padding-right: 400px;
+}
+
+
+li {
+  margin: 25px;
+  padding-right: 250px;
+  border-left: solid blue;
+}
+ 
+li button {
+  color: blue;
+  background: black;
+  font-size: 20px;
+  margin-left: 800px;
+  border: solid;
 }
