--- a/style.css
+++ b/style.css
@@ -29,19 +29,19 @@ h1 {
 .tasks {
   list-style: none;
   padding-right: 400px;
+  margin: 0 -50px;
 }
-
 
 li {
   margin: 25px;
-  padding-right: 250px;
+  padding-right: 450px;
   border-left: solid blue;
 }
- 
+
 li button {
   color: blue;
   background: black;
   font-size: 20px;
-  margin-left: 800px;
+  margin-left: 850px;
   border: solid;
 }
